# MISC

./: .gitignore  LICENSE  README.md
FlyInterface/: .gitignore  db.sqlite3  manage.py
FlyInterface/FlyInterface/: asgi.py  settings.py  urls.py  wsgi.py
FlyInterface/home/: models.py  urls.py  views.py
FlyInterface/home/templates/home/: home_page.html  imagej_viewer.html  index.html
MotionVector/: .gitignore
MotionVector/MV_NVENC/: CMakeLists.txt  README.md  main.cpp
PiTools/: camera_preview_crosshair.py  gatt_server.py  gatt_server_simple.py  simple-agent.py
